--- a/pom.xml
+++ b/pom.xml
@@ -25,15 +25,21 @@
 	    <artifactId>cucumber-reporting</artifactId>
 	    <version>4.1.0</version>
 	   </dependency>
-	  <dependency>
-	<groupId>com.vimalselvam</groupId>
-	<artifactId>cucumber-extentsreport</artifactId>
-	<version>3.0.2</version>
-</dependency>
+	<dependency>
+    <groupId>org.springframework</groupId>
+    <artifactId>spring-jdbc</artifactId>
+    <version>5.0.10.RELEASE</version>
+	</dependency>
+	<dependency>
+    <groupId>com.h2database</groupId>
+    <artifactId>h2</artifactId>
+    <version>1.4.190</version>
+    <scope>runtime</scope>
+	</dependency>
 <dependency>
-	<groupId>com.aventstack</groupId>
-	<artifactId>extentreports</artifactId>
-	<version>3.1.2</version>
+    <groupId>com.oracle</groupId>
+    <artifactId>ojdbc14</artifactId>
+    <version>10.2.0.1.0</version>
 </dependency>
     </dependencies>
 
